--- a/bib/mybib.bib
+++ b/bib/mybib.bib
@@ -1,79 +1,190 @@
-@book{Wettl04,
-  author    = {Ferenc Wettl and Gyula Mayer and Péter Szabó},
-  publisher = {Panem Könyvkiadó},
-  title     = {\LaTeX~kézikönyv},
-  year      = {2004},
+@techreport{rfc9000,
+    series =    {Request for Comments},
+    number =    9000,
+    howpublished =  {RFC 9000},
+    publisher = {RFC Editor},
+    doi =       {10.17487/RFC9000},
+    url =       {https://www.rfc-editor.org/info/rfc9000},
+    author =    {Jana Iyengar and Martin Thomson},
+    title =     {{QUIC: A UDP-Based Multiplexed and Secure Transport}},
+    pagetotal = 151,
+    year =      2021,
+    month =     may,
+    abstract =  {This document defines the core of the QUIC transport protocol. QUIC provides applications with flow-controlled streams for structured communication, low-latency connection establishment, and network path migration. QUIC includes security measures that ensure confidentiality, integrity, and availability in a range of deployment circumstances. Accompanying documents describe the integration of TLS for key negotiation, loss detection, and an exemplary congestion control algorithm.},
 }
 
-@article{Candy86,
-  author       = {James C. Candy},
-  journaltitle = {{IEEE} Trans.\ on Communications},
-  month        = {01},
-  note         = {\doi{10.1109/TCOM.1986.1096432}},
-  number       = {1},
-  pages        = {72--76},
-  title        = {Decimation for Sigma Delta Modulation},
-  volume       = {34},
-  year         = {1986},
+
+@techreport{moq-transport,
+    number =    {draft-ietf-moq-transport-15},
+    type =      {Internet-Draft},
+    institution =   {Internet Engineering Task Force},
+    publisher = {Internet Engineering Task Force},
+    note =      {Work in Progress},
+    url =       {https://datatracker.ietf.org/doc/draft-ietf-moq-transport/15/},
+    author =    {Suhas Nandakumar and Victor Vasiliev and Ian Swett and Alan Frindell},
+    title =     {{Media over QUIC Transport}},
+    pagetotal = 102,
+    year =      2025,
+    month =     oct,
+    day =       20,
+    abstract =  {This document defines the core behavior for Media over QUIC Transport (MOQT), a media transport protocol designed to operate over QUIC and WebTransport, which have similar functionality. MOQT allows a producer of media to publish data and have it consumed via subscription by a multiplicity of endpoints. It supports intermediate content distribution networks and is designed for high scale and low latency distribution.},
 }
 
-@inproceedings{Lee87,
-  author    = {Wai L. Lee and Charles G. Sodini},
-  booktitle = {Proc.\ of the IEEE International Symposium on Circuits and Systems},
-  location  = {Philadelphia, PA, USA},
-  month     = {05~4--7},
-  pages     = {459--462},
-  title     = {A Topology for Higher Order Interpolative Coders},
-  vol       = {2},
-  year      = {1987},
+@misc{miniero_getting_2024,
+	title = {Getting {Media} {Over} {QUIC} ({MoQ}) and {WebRTC} to like each other {\textbar} {Meetecho} {Blog}},
+	url = {https://www.meetecho.com/blog/moq-webrtc/},
+	abstract = {It's been a few weeks since we started having a look at QUIC and how it can be used for real-time media. We started a couple of months ago with an overview on QUIC itself, and my prototype stack implementation of it. After that, we started looking at some practical applications, focusing specifically on RTP},
+	language = {en-US},
+	urldate = {2025-12-01},
+	author = {Miniero, Lorenzo},
+	month = sep,
+	year = {2024},
+	file = {Snapshot:/home/schweitzer/Zotero/storage/X3EC8YYC/moq-webrtc.html:text/html},
 }
 
-@thesis{KissPhD,
-  author      = {Peter Kiss},
-  institution = {Technical University of Timi\c{s}oara, Romania},
-  month       = {04},
-  title       = {Adaptive Digital Compensation of Analog Circuit Imperfections for Cascaded Delta-Sigma Analog-to-Digital Converters},
-  type        = {phdthesis},
-  year        = {2000},
+
+@techreport{ietf-moq-warp-01,
+    number =    {draft-ietf-moq-warp-01},
+    type =      {Internet-Draft},
+    institution =   {Internet Engineering Task Force},
+    publisher = {Internet Engineering Task Force},
+    note =      {Work in Progress},
+    url =       {https://datatracker.ietf.org/doc/draft-ietf-moq-warp/01/},
+    author =    {Will Law and Luke Curley and Victor Vasiliev and Suhas Nandakumar and Kirill Pugin},
+    title =     {{WARP Streaming Format}},
+    pagetotal = 28,
+    year =      2025,
+    month =     jul,
+    day =       22,
+    abstract =  {This document specifies the WARP Streaming Format, designed to operate on Media Over QUIC Transport.},
 }
 
-@manual{Schreier00,
-  author       = {Richard Schreier},
-  month        = {01},
-  note         = {\url{http://www.mathworks.com/matlabcentral/fileexchange/}},
-  organization = {Oregon State University},
-  title        = {The Delta-Sigma Toolbox v5.2},
-  year         = {2000},
+@misc{iso_cmaf_2024,
+  author       = {{ISO/IEC JTC 1/SC 29}},
+  title        = {{ISO/IEC 23000-19:2024 Information technology -- Multimedia application format (MPEG-A) -- Part 19: Common media application format (CMAF) for segmented media}},
+  howpublished = {\url{https://webstore.iec.ch/publication/98515}},
+  year         = {2024},
+  month        = feb,
+  note         = {Third edition. Abstract: This document specifies the CMAF multimedia format, which contains segmented media objects optimized for streaming delivery and decoding on end-user devices in adaptive multimedia presentations. It defines a standard container for audio/visual content to be used in adaptive bitrate streaming (HLS/DASH) and low-latency applications.},
+  type         = {Standard}
 }
 
-@misc{DipPortal,
-  author       = {{Budapesti Műszaki és Gazdaságtudományi Egyetem Villamosmérnöki és Informatikai Kar}},
-  howpublished = {\url{http://diplomaterv.vik.bme.hu/}},
-  title        = {Diplomaterv portál (2011. február 26.)},
+@misc{gumlet-cmaf,
+  author       = {Uma Nair},
+  title        = {Common Media Application Format (CMAF): What It Is and How It Works},
+  howpublished = {\url{https://www.gumlet.com/learn/what-is-cmaf/}},
+  year         = {2024},
+  month        = sep,
+  note         = {Updated: 2024-09-03, Elérés ideje: 2025-11-13},
 }
 
-@incollection{Mkrtychev:1997,
-  author    = {Mkrtychev, Alexey},
-  booktitle = {Logical Foundations of Computer Science},
-  doi       = {10.1007/3-540-63045-7_27},
-  editor    = {Adian, Sergei and Nerode, Anil},
-  isbn      = {978-3-540-63045-6},
-  pages     = {266-275},
-  publisher = {Springer Berlin Heidelberg},
-  series    = {Lecture Notes in Computer Science},
-  title     = {Models for the logic of proofs},
-  url       = {http://dx.doi.org/10.1007/3-540-63045-7_27},
-  volume    = {1234},
-  year      = {1997},
+
+
+@misc{ffmpeg_devs,
+  author = {FFmpeg Developers},
+  title = {{FFmpeg Documentation}},
+  year = {2025},
+  month = dec,
+  howpublished = {\url{https://ffmpeg.org/ffmpeg.html}},
+  note = {Accessed: 2025-12-07}
 }
 
-@report{Jeney,
-  author      = {Jeney, Gábor},
-  institution = {Budapesti Műszaki és Gazdaságtudományi Egyetem, Híradástechnikai Tanszék},
-  location    = {Budapest},
-  note        = {\url{http://www.mcl.hu/~jeneyg/kinezet.pdf}},
-  title       = {Hogyan néz ki egy igényes dokumentum? {N}éhány szóban az alapvető tipográfiai szabályokról},
-  type        = {techreport},
-  year        = {2014},
+@misc{moq_rs_repo,
+  title        = {{moq-rs: Media over QUIC in Rust}},
+  author       = {{Cloudflare}},
+  howpublished = {\url{https://github.com/cloudflare/moq-rs}},
+  year         = {2024},
+  note         = {GitHub repository, Elérés ideje: 2025-12-03},
+}
+@misc{moq_go_repo,
+  title        = {{moqtransport: Media over QUIC Transport Implementation in Go}},
+  author       = {Engelbart, Mathis},
+  howpublished = {\url{https://github.com/mengelbart/moqtransport}},
+  year         = {2024},
+  note         = {GitHub repository, Elérés ideje: 2025-12-03}
 }
 
+
+@misc{kix_moq_repo,
+title        = {{moq: Media over QUIC library in Rust and TypeScript}},
+  author       = {Curley, Luke},
+  howpublished = {\url{https://github.com/kixelated/moq}},
+  year         = {2024},
+  note         = {GitHub repository, Elérés ideje: 2025-12-03},
+}
+
+@misc{libquicr_repo,
+  title        = {{LibQuicR: QuicR Library Implementation}},
+  author       = {{QuicR Project}},
+  howpublished = {\url{https://github.com/Quicr/libquicr}},
+  year         = {2024},
+  note         = {GitHub repository, Elérés ideje: 2025-12-03},
+}
+
+
+@techreport{nandakumar-moq-arch-00,
+    number =    {draft-nandakumar-moq-arch-00},
+    type =      {Internet-Draft},
+    institution =   {Internet Engineering Task Force},
+    publisher = {Internet Engineering Task Force},
+    note =      {Work in Progress},
+    url =       {https://datatracker.ietf.org/doc/draft-nandakumar-moq-arch/00/},
+    author =    {Suhas Nandakumar and Cullen Fluffy Jennings},
+    title =     {{Media Over QUIC Media and Security Architecture}},
+    pagetotal = 15,
+    year =      2023,
+    month =     mar,
+    day =       13,
+    abstract =  {This document defines the media and security architecture for Media Over QUIC, a protocol suite intended to run in browsers and other non-browser endpoints and support unified architecture and protocol for data delivery that enables a wide range of media applications with different resiliency and latency needs without compromising the scalability and cost effectiveness associated with content delivery networks. Note to readers: This document as it stands might not reflect accurately all decisions that are in active discussions in the WG, but it lays out a foundation for expected architectural requirements. The specification will be updated based on the decision made in the WG.},
+}
+
+
+@techreport{ietf-moq-loc-01,
+    number =    {draft-ietf-moq-loc-01},
+    type =      {Internet-Draft},
+    institution =   {Internet Engineering Task Force},
+    publisher = {Internet Engineering Task Force},
+    note =      {Work in Progress},
+    url =       {https://datatracker.ietf.org/doc/draft-ietf-moq-loc/01/},
+    author =    {Mo Zanaty and Suhas Nandakumar and Peter Thatcher},
+    title =     {{Low Overhead Media Container}},
+    pagetotal = 15,
+    year =      2025,
+    month =     jul,
+    day =       7,
+    abstract =  {This specification describes a Low Overhead Media Container (LOC) format for encoded and encrypted audio and video media data to be used primarily for interactive Media over QUIC Transport (MOQT). It may be used in the WARP streaming specification, which defines a catalog format for publishers to annouce and describe their LOC tracks and for subscribers to consume them. Examples are also provided for building media applications using LOC and MOQT.},
+}
+
+
+@software{lohmann_json_2025,
+	title = {{JSON} for Modern C++},
+	rights = {{MIT}},
+	url = {https://github.com/nlohmann/json},
+	abstract = {{JSON} for Modern C++},
+	version = {3.12.0},
+	author = {Lohmann, Niels},
+	urldate = {2025-12-07},
+	date = {2025-04},
+	note = {Elérés ideje: 2025-12-07},
+}
+
+
+@misc{BigBuckBunny2008,
+  title = {Big Buck Bunny},
+  author = {Blender Institute},
+  year = {2008},
+  howpublished = {Animated Short Film},
+  publisher = {Blender Foundation},
+  note = {Open Source, Creative Commons, Accessed: 2025-12-07},
+  url = {www.bigbuckbunny.org}
+}
+
+@online{gcore_low_latency,
+  author       = {{Gcore}},
+  title        = {How low latency streaming works},
+  organization = {Gcore Docs},
+  url          = {https://gcore.com/docs/streaming/live-streaming/how-low-latency-streaming-works},
+  urldate      = {2025-12-07},
+  year         = {n.d.},
+  note         = {Elérés ideje: 2025-12-07}
+}
