--- a/include/packages.tex
+++ b/include/packages.tex
@@ -21,6 +21,11 @@
 %\usepackage[ruled,boxed,resetcount,linesnumbered]{algorithm2e} % For pseudocodes. % beware: this is not compatible with LuaLaTeX, see http://tex.stackexchange.com/questions/34814/lualatex-and-algorithm2e
 \usepackage{booktabs} % For publication quality tables for LaTeX
 \usepackage{graphicx}
+\usepackage{tikz}
+\usetikzlibrary{shapes.geometric, shapes.symbols, shapes.misc, arrows.meta, positioning, calc, fit, shadows, backgrounds}
+\usepackage{dirtree}
+\usepackage{xcolor}
+\usepackage{multicol}
 
 %\usepackage{fancyhdr}
 %\usepackage{lastpage}
