--- a/include/thesis-en.tex
+++ b/include/thesis-en.tex
@@ -4,7 +4,8 @@
 \newcommand{\bme}{Budapest University of Technology and Economics}
 \newcommand{\vik}{Faculty of Electrical Engineering and Informatics}
 
-\newcommand{\bmemit}{Department of Measurement and Information Systems}
+\newcommand{\bmetmit}{Department of Telecommunications and Artificial
+Intelligence}
 
 \newcommand{\keszitette}{Author}
 \newcommand{\konzulens}{Advisor}
