--- a/include/thesis-hu.tex
+++ b/include/thesis-hu.tex
@@ -4,7 +4,7 @@
 \newcommand{\bme}{Budapesti Műszaki és Gazdaságtudományi Egyetem}
 \newcommand{\vik}{Villamosmérnöki és Informatikai Kar}
 
-\newcommand{\bmemit}{Méréstechnika és Információs Rendszerek Tanszék}
+\newcommand{\bmetmit}{Távközlési és Mesterséges Intelligencia Tanszék}
 
 \newcommand{\keszitette}{Készítette}
 \newcommand{\konzulens}{Konzulens}
